# rust-web

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: gen_key.rs  quick_dev.rs
sql/dev_initial/: 00-recreate.sql  01-init.sql
src/: config.rs  error.rs  main.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
src/ctx/: error.rs  mod.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
src/model/store/: error.rs  mod.rs
src/util/: error.rs  mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  routes_login.rs  routes_static.rs
src/web/rpc/: mod.rs  task_rpc.rs
