[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"]}

# Json
serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde_with = "2"

# Web
axum = "0.6"
tower-http = { version = "0.4", features = ["fs"]}
tower-cookies = "0.9"

# Data
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"]}
sqlb = "0.3"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}

# Crypt & Encoding
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64-url = "2"

# Others
async-trait = "0.1"
lazy-regex = "2"
strum_macros = "0.24"
time = "0.3"
uuid = { version = "1", features = ["v4", "fast-rng"]}

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "2"
